@@ -5,8 +5,8 @@
 // An example of reading the Argon2 parameters from a file.
 
 #include <fmt/core.h>
-#include <unistd.h>
 
+#include <CLI/CLI.hpp>
 #include <cerrno>
 #include <cstdint>
 #include <cstdlib>
@@ -20,38 +20,12 @@
 #include "abcrypt.h"
 #include "version.hpp"
 
-static void print_help(void) {
-  std::cout << "Usage: info <FILE>\n\n";
-  std::cout << "Arguments:\n";
-  std::cout << "  <FILE>  File to print the Argon2 parameters\n\n";
-  std::cout << "Options:\n";
-  std::cout << "  -h  Print help\n";
-  std::cout << "  -V  Print version" << std::endl;
-}
-
 int main(int argc, char *argv[]) {
-  int opt;
-  while ((opt = getopt(argc, argv, "hV")) != -1) {
-    switch (opt) {
-      case 'h':
-        print_help();
-        return EXIT_SUCCESS;
-      case 'V':
-        print_version();
-        return EXIT_SUCCESS;
-      default:
-        print_help();
-        return EXIT_FAILURE;
-    }
-  }
-
-  char *input_filename;
-  if ((argc - optind) == 1) {
-    input_filename = argv[optind];
-  } else {
-    print_help();
-    return EXIT_FAILURE;
-  }
+  CLI::App app{"An example of reading the Argon2 parameters"};
+  app.set_version_flag("-V,--version", VERSION, "Print version");
+  std::string input_filename;
+  app.add_option("<FILE>", input_filename, "Input file")->required();
+  CLI11_PARSE(app, argc, argv);
 
   std::ifstream input_file(input_filename);
   if (!input_file) {
