@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/abcrypt-capi-v0.2.5\...HEAD[Unreleased]
+
+=== Changed
+
+* Update C API examples ({pull-request-url}/257[#257])
+
 == {compare-url}/abcrypt-capi-v0.2.4\...abcrypt-capi-v0.2.5[0.2.5] - 2024-01-18
 
 === Changed
